[package]
name = "ElmoPhotoGen"
version = "1.0.0"
edition = "2024"
description = "Make an album for the Elmo!"

[target.'cfg(windows)'.build-dependencies]
tauri-winres = "0.3.6"

[dependencies]
md5 = "0.8.0"
nanoserde = { version = "0.2.1", default-features = false, features = ["json"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"